--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
-alembic==1.12.1
 pydantic==2.5.0
 pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
@@ -11,7 +10,8 @@ openai==1.3.7
 stripe==7.8.0
 jinja2==3.1.2
 python-dotenv==1.0.0
-psycopg2-binary==2.9.9
+psycopg2-binary
+alembic
 slowapi==0.1.9
 aiofiles==23.2.1
 
