Security: input validation (pydantic v2), CORS via ALLOWED_HOSTS, rate limit via env; docs in .env.example

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
 ENVIRONMENT=development
 ALLOWED_HOSTS=localhost,127.0.0.1
+# Rate limiting per minute
+RATE_LIMIT_PER_MINUTE=10
