--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-sqlalchemy==2.0.23
-pydantic==2.5.0
-pydantic-settings==2.1.0
+# SQLAlchemy 2.0.23 has issues on Python 3.13; bump to a 2.0.x version with 3.13 support
+sqlalchemy==2.0.36
+pydantic==2.9.2
+pydantic-settings==2.3.4
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
