Docs: add Postgres quickstart and env example (psycopg2 DSN, FREE monthly limit)

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Environment Configuration
-DATABASE_URL=postgresql://username:password@localhost/inbox_detox
+DATABASE_URL=postgresql+psycopg2://inbox:inbox@localhost:5432/inbox_detox
 SECRET_KEY=your-super-secret-key-change-this-in-production
 OPENAI_API_KEY=your-openai-api-key
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
@@ -8,3 +8,5 @@ ENVIRONMENT=development
 ALLOWED_HOSTS=localhost,127.0.0.1
 # Rate limiting per minute
 RATE_LIMIT_PER_MINUTE=10
+# Free plan monthly quota
+FREE_MONTHLY_ANALYSIS_LIMIT=20
