Verification: email verification tokens + SMTP sender; require verified email on login; config for app_base_url and SMTP; fix VerificationToken relationship

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 RATE_LIMIT_PER_MINUTE=10
 # Free plan monthly quota
 FREE_MONTHLY_ANALYSIS_LIMIT=20
+# Auto-migrate (Alembic) on app startup (optional)
+AUTO_MIGRATE_ON_STARTUP=false
+# PYTHON_EXECUTABLE used to run alembic (optional override)
+# On Windows venv default would be something like: C:\\path\\to\\repo\\venv\\Scripts\\python.exe
+# PYTHON_EXECUTABLE=
