--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,16 @@
 # Environment Configuration
 DATABASE_URL=postgresql+psycopg2://inbox:inbox@localhost:5432/inbox_detox
-SECRET_KEY=your-super-secret-key-change-this-in-production
+SECRET_KEY=your-super-secret-key-change-this-in-production # Use >=32 chars, random in production
 OPENAI_API_KEY=your-openai-api-key
 STRIPE_SECRET_KEY=sk_test_your_stripe_secret_key
 STRIPE_PUBLISHABLE_KEY=pk_test_your_stripe_publishable_key
-ENVIRONMENT=development
+ENVIRONMENT=development # one of: development, staging, production
 ALLOWED_HOSTS=localhost,127.0.0.1
+# In production, set explicit CORS origins (comma-separated). Example:
+# CORS_ALLOWED_ORIGINS=https://app.example.com,https://admin.example.com
+# Leave empty in development to allow all origins.
+# CORS_ALLOWED_ORIGINS=
+COOKIE_SAMESITE=lax # one of: lax, strict, none (none requires Secure over HTTPS)
 # Rate limiting per minute
 RATE_LIMIT_PER_MINUTE=10
 # Free plan monthly quota
