UI: multicolor Nexa brand + red/black mesh login; Forgot/Reset Password pages; Gmail status/disconnect; SPA serving & auth tweaks; i18n + styles; tests green

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,8 @@ ENVIRONMENT=development # one of: development, staging, production
 ALLOWED_HOSTS=localhost,127.0.0.1
 # In production, set explicit CORS origins (comma-separated). Example:
 # CORS_ALLOWED_ORIGINS=https://app.example.com,https://admin.example.com
-# Leave empty in development to allow all origins.
-# CORS_ALLOWED_ORIGINS=
+# In development, you can leave it empty to allow all origins.
+CORS_ALLOWED_ORIGINS=
 COOKIE_SAMESITE=lax # one of: lax, strict, none (none requires Secure over HTTPS)
 # Rate limiting per minute
 RATE_LIMIT_PER_MINUTE=10
@@ -20,3 +20,27 @@ AUTO_MIGRATE_ON_STARTUP=false
 # PYTHON_EXECUTABLE used to run alembic (optional override)
 # On Windows venv default would be something like: C:\\path\\to\\repo\\venv\\Scripts\\python.exe
 # PYTHON_EXECUTABLE=
+
+# Backups configuration
+# Where to store backups (relative or absolute path)
+BACKUP_DIR=backups
+# How many recent backups to keep
+BACKUP_RETENTION=7
+
+# CAPTCHA (Cloudflare Turnstile)
+# Enable to require human verification on auth flows
+CAPTCHA_ENABLED_LOGIN=false
+CAPTCHA_ENABLED_REGISTER=false
+TURNSTILE_SITE_KEY=
+TURNSTILE_SECRET_KEY=
+
+# Development flags
+# Allow login for unverified emails (do NOT enable in production)
+ALLOW_UNVERIFIED_LOGIN=false
+
+# CAPTCHA (Cloudflare Turnstile)
+# Enable these to require human verification on auth endpoints
+CAPTCHA_ENABLED_LOGIN=false
+CAPTCHA_ENABLED_REGISTER=false
+TURNSTILE_SITE_KEY=
+TURNSTILE_SECRET_KEY=
