--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,7 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = %(DB_URL)s
+# Default to local SQLite; env.py overrides with DATABASE_URL if set
+sqlalchemy.url = sqlite:///./inbox_detox.db
 
 [loggers]
 keys = root,sqlalchemy,alembic
