--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,9 @@
     "@types/react-dom": "^18.2.7",
     "@types/node": "^20.11.30",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.4.5",
     "vite": "^5.0.0"
   }
