--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,6 +13,6 @@
     "types": [],
     "allowImportingTsExtensions": true
   },
-  "include": ["src", "src/vite-env.d.ts"]
+  "include": ["src", "src/vite-env.d.ts", "src/types/assets.d.ts"]
   ,"exclude": ["node_modules", "dist"]
 }
