--- a/requirements.txt
+++ b/requirements.txt
@@ -16,11 +16,13 @@ alembic
 slowapi==0.1.9
 aiofiles==23.2.1
 bleach==6.1.0
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+httpx==0.27.2
 
 # Development dependencies
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.2
 black==23.11.0
 flake8==6.1.0
 pytest-cov==4.1.0
