--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,68 @@
+# Node
+node_modules/
+**/node_modules/
+.npmrc
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Next.js
+.next/
+**/.next/
+out/
+.next-static/
+.vercel/
+
+# Env files
+.env
+.env.*
+*.env
+*.env.*
+**/.env
+**/.env.*
+
+# Logs
+logs
+*.log
+*.log.*
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Editor
+.vscode/
+.idea/
+*.swp
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+.venv*/
+venv*/
+.eggs/
+*.egg-info/
+.python-version
+.mypy_cache/
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+coverage/
+
+# Frontend build outputs
+frontend-next/.next/
+frontend-next/node_modules/
+frontend-next/out/
+
+# Misc
+*.local
 # Python
 __pycache__/
 *.py[cod]
