chore(vercel): monorepo config to build frontend-next; chore: add env example updates

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,54 @@
+# Runtime environment
+ENVIRONMENT=production
+DEBUG=false
+
+# Database (use Postgres or similar in production)
+DATABASE_URL=postgresql+psycopg2://user:pass@host:5432/inbox_detox
+
+# Security
+SECRET_KEY=change-me-32+chars-long
+ALGORITHM=HS256
+
+# CORS (comma-separated). REQUIRED in production
+CORS_ALLOWED_ORIGINS=https://nexa.vercel.app,https://your-frontend.example.com
+
+# Hosts allowed by the app
+ALLOWED_HOSTS=127.0.0.1,localhost,api.example.com
+
+# Google OAuth (Gmail)
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=https://api.example.com/api/gmail/callback
+# Space-separated scopes string (usually OK to leave default in code)
+# GOOGLE_SCOPES="https://www.googleapis.com/auth/gmail.readonly https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile openid"
+
+# Logging
+LOG_LEVEL=INFO
+
+# Optional features
+ALLOW_UNVERIFIED_LOGIN=false
+
+# SMTP (optional; enable if you want email sending)
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_USE_TLS=true
+SMTP_FROM=no-reply@example.com
+
+# CAPTCHA (Cloudflare Turnstile) optional
+CAPTCHA_ENABLED_LOGIN=false
+CAPTCHA_ENABLED_REGISTER=false
+TURNSTILE_SITE_KEY=
+TURNSTILE_SECRET_KEY=
+
+# Redis (optional)
+REDIS_URL=
+
+# Stripe (optional)
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
 # Environment Configuration
 DATABASE_URL=postgresql+psycopg2://inbox:inbox@localhost:5432/inbox_detox
 SECRET_KEY=your-super-secret-key-change-this-in-production # Use >=32 chars, random in production
