--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ uvicorn[standard]==0.24.0
 # SQLAlchemy 2.0.23 has issues on Python 3.13; bump to a 2.0.x version with 3.13 support
 sqlalchemy==2.0.36
 pydantic==2.9.2
+# Required for EmailStr and email validation in Pydantic
+email-validator>=2.1.0
 pydantic-settings==2.3.4
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
