--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
+  "version": 2,
   "builds": [
     { "src": "frontend-next/package.json", "use": "@vercel/next" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "frontend-next/$1" }
   ]
 }
+
+  
+ 
