chore(alembic): set sqlalchemy.url to  and rely on start command for migrations

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,7 +1,7 @@
 [alembic]
 script_location = alembic
-# Default to local SQLite; env.py overrides with DATABASE_URL if set
-sqlalchemy.url = sqlite:///./inbox_detox.db
+# Read DB URL from environment; env.py can still override if needed
+sqlalchemy.url = ${DATABASE_URL}
 
 [loggers]
 keys = root,sqlalchemy,alembic
