--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,19 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend-next/package.json", "use": "@vercel/next" }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
 
